--- a/.github/workflows/N1.yml
+++ b/.github/workflows/N1.yml
@@ -122,6 +122,22 @@ jobs:
         echo "FIRMWARE=$PWD" >> $GITHUB_ENV
         echo "::set-output name=status::success"
         
+    - name: Build OpenWrt for Amlogic S9xxx STB
+      id: build
+      run: |
+        git clone --depth 1 https://github.com/ophub/amlogic-s9xxx-openwrt.git
+        cd amlogic-s9xxx-openwrt/
+        [ -d openwrt-armvirt ] || mkdir -p openwrt-armvirt
+        cp -f ../openwrt/bin/targets/*/*/*.tar.gz openwrt-armvirt/ && sync
+        sudo rm -rf ../openwrt && sync
+        sudo rm -rf /workdir && sync
+        sudo chmod +x make
+        sudo ./make -d -b s905x3_s905x2_s905x_s905d_s922x_s912 -k 5.4.105_5.4.77_5.4.50
+        cd out/ && sudo gzip *.img
+        cp -f ../openwrt-armvirt/*.tar.gz . && sync
+        echo "FILEPATH=$PWD" >> $GITHUB_ENV
+        echo "::set-output name=status::success"    
+    
     - name: Upload firmware directory
       uses: actions/upload-artifact@main
       if: steps.organize.outputs.status == 'success' && !cancelled()
