--- a/.github/workflows/N1.yml
+++ b/.github/workflows/N1.yml
@@ -12,8 +12,8 @@ on:
   #  - cron: 0 8 * * 5
 
 env:
-  REPO_URL: https://github.com/coolsnowwolf/lede
-  REPO_BRANCH: master
+  REPO_URL: https://github.com/immortalwrt/immortalwrt
+  REPO_BRANCH: openwrt-18.06-k5.4
   FEEDS_CONF: feeds.conf.default
   CONFIG_FILE: N1.config
   DIY_P1_SH: N1.sh
