--- a/.github/workflows/N1.yml
+++ b/.github/workflows/N1.yml
@@ -19,7 +19,7 @@ env:
   DIY_P1_SH: N1.sh
   DIY_P2_SH: diy-part2.sh
   SSH_ACTIONS: false
-  UPLOAD_BIN_DIR: true
+  UPLOAD_BIN_DIR: false
   UPLOAD_FIRMWARE: false
   UPLOAD_COWTRANSFER: false
   UPLOAD_WETRANSFER: false
