--- a/N1.config
+++ b/N1.config
@@ -80,6 +80,7 @@ CONFIG_PACKAGE_xfs-mkfs=y
 CONFIG_PACKAGE_install-program=y
 CONFIG_PACKAGE_luci-app-adbyby-plus=y
 CONFIG_PACKAGE_luci-app-frpc=y
+CONFIG_PACKAGE_luci-app-ddnsto=y
 CONFIG_PACKAGE_luci-app-jd-dailybonus=y
 CONFIG_PACKAGE_luci-app-ipsec-vpnd=y
 CONFIG_PACKAGE_luci-app-ssr-mudb-server=y
