--- a/.github/workflows/N1.yml
+++ b/.github/workflows/N1.yml
@@ -49,7 +49,7 @@ jobs:
 
       - name: Load config
         run: |
-          [ -e ./N1.config ] && cp ./N1.config ./openwrt/
+          [ -e ./.config ] && cp ./.config ./openwrt/
           chmod +x ./custom.sh
           cd openwrt
           $GITHUB_WORKSPACE/custom.sh
